--- a/home/src/components/NavbarStyles.css
+++ b/home/src/components/NavbarStyles.css
@@ -4,9 +4,8 @@
     align-items: center;
     padding: 0 30px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
-    width: 100%; /* Full width for all screens */
+    width: 100%; 
     height: 80px;
-    /* border-radius: 13px; */
     background-color: #013927;
     position: relative; /* Ensure navbar stays at the top */
 }
@@ -27,10 +26,10 @@
 }
 
 .nav-menu li a {
-    color: black;
+    color: white;
     text-decoration: none;
     font-size: 1.2rem;
-    transition: color 0.2s ease-in-out; /* Smooth color transition */
+    transition: color 0.2s ease-in-out; 
 }
 
 .nav-menu li a:hover {
@@ -45,22 +44,20 @@
     display: none;
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 768px) {
 
-    /* Navbar container styles */
     .navbaritems {
         display: flex;
-        justify-content: space-between; /* Aligns logo and icon on the same row */
-        align-items: center; /* Vertically centers the logo and icon */
-        padding: 0 1rem;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 15px;
         height: 80px;
-        background-color: #013927; /* Example background */
-        position: relative;
+        background-color: #013927;
     }
 
-    /* Styling for the navbar logo */
+    /* Styling for the navbar logo on mobile */
     .navbar-logo {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
         color: white;
         font-weight: bold;
     }
@@ -71,13 +68,13 @@
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
-        background-color: #fff;
+        background-color: #013927;
         width: 100%;
         position: absolute;
-        top: 0;
+        top: 80px;
         left: 0;
         opacity: 0;
-        padding: 80px 0 30px 0;
+        padding: 20px 0; 
         margin: 0;
         z-index: -1;
         transition: opacity 0.3s ease-in-out, z-index 0.3s;
@@ -90,7 +87,7 @@
         z-index: 1;
     }
 
-    /* Style the menu icon */
+    /* Style the menu icon for mobile */
     .menu-icon {
         display: block;
         font-size: 2rem;
@@ -104,20 +101,19 @@
         display: block;
         width: 100%;
         font-size: 1.2rem;
-        padding: 2rem 0;
+        padding: 15px 0;
         text-align: center;
-        color: #333;
+        color: white;
         text-decoration: none;
     }
 
-    /* Hover effect for nav links */
+    /* Hover effect for nav links on mobile */
     .nav-menu li a:hover {
         background-color: #01959a;
-        transition: none;
         color: white;
     }
 
-    /* Aligns the menu icon and logo on the same row */
+    /* Align the menu icon and logo on the same row */
     .navbar-logo,
     .menu-icon {
         z-index: 2; /* Ensure they are on top of the content */
