--- a/home/src/components/HomeDetailStyle.css
+++ b/home/src/components/HomeDetailStyle.css
@@ -35,14 +35,14 @@
     .img-text h1 {
         font-size: 3rem;
         font-weight: 800;
-        background-color: #FFEB3B;
+        background-color: #ffff;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
     
     .img-text p {
         font-size: 1.3rem;
-        color: #FFEB3B;
+        color: #fff;
         padding: 0.5rem 0 2rem 0;
     }
     
