--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/InventoryManagement/Index.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/InventoryManagement/Index.cshtml
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inventory Management</title>
-    <link href="~/css/Admin/styles.css" rel="stylesheet" />
+    <link href="~/css/Admin/pagingstyle.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T387870TPpwcgR8m7+UP+7X/qOH3b6T1QjsDuUp25/7YkG79664NVoIPd35N72q10" crossorigin="anonymous">
 </head>
 <body>
@@ -20,7 +20,7 @@
                         <option value="camping-gears">Camping Gears</option>
                     </select>
                 </div>
-                <div class="col-md-9 search-width">
+                <div class="col-md-3">
                     <input type="text" id="searchInput" class="form-control" placeholder="Search here..">
                 </div>
             </div>
@@ -40,31 +40,7 @@
                     <tr>
                         <td>103</td>
                         <td>Thit bo</td>
-                        <td>Food & Drinks</td>
-                        <td>20</td>
-                        <td>200</td>
-                        <td>
-                            <button class="btn btn-primary">Edit</button>
-                            <button class="btn btn-danger">Delete</button>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td>215</td>
-                        <td>Leu nho</td>
-                        <td>Camping Gears</td>
-                        <td>20</td>
-                        <td>200</td>
-                        <td>
-                            <button class="btn btn-primary">Edit</button>
-                            <button class="btn btn-danger">Delete</button>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td>330</td>
-                        <td>Ve tre em</td>
-                        <td>Tickets</td>
+                        <td>Food & Drink</td>
                         <td>20</td>
                         <td>200</td>
                         <td>
@@ -75,12 +51,16 @@
                 </tbody>
             </table>
 
-            <!-- Pagination Controls -->
-            <nav aria-label="Page navigation example">
-                <ul class="pagination" id="paginationControls">
-                    <!-- Pagination buttons will be dynamically created -->
-                </ul>
-            </nav>
+            <div id="paginationControls" class="d-flex justify-content-between align-items-center">
+                <div>
+                    <button id="prevPage" class="btn btn-secondary" disabled>Previous</button>
+                    <button id="nextPage" class="btn btn-secondary">Next</button>
+                </div>
+                <div>
+                    <span id="itemCount"></span>
+                </div>
+                <ul class="pagination" id="pageNumbers"></ul>
+            </div>
 
             <button id="createButton" class="btn btn-primary">Create New Item</button>
         </div>
