--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/CreateOrder.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/CreateOrder.cshtml
@@ -3,55 +3,63 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Create New Order</title>
+        <title>Tạo order vé mới</title>
         <link href="~/css/Admin/styles.css" rel="stylesheet" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T387870TPpwcgR8m7+UP+7X/qOH3b6T1QjsDuUp25/7YkG79664NVoIPd35N72q10" crossorigin="anonymous">
     </head>
     <body>
-        <div class="container mt-5">
-            <h2>Create New Order</h2>
-            <form id="createOrderForm" method="post" action="/OrderManagement/CreateOrder">
+        <div class="container mt-4">
+            <h2>Đặt vé</h2><br />
+            
+            <div class="row g-2 mb-6">
             <div class="col-md-6">
-                    <label for="customerName" class="form-label">Customer Name</label>
+                    <label for="customerName" class="form-label">Tên khách hàng</label>
                     <input type="text" class="form-control" id="customerName" name="customerName" required>
                 </div>
-            <div class="col-md-6">
-                    <label for="employeeName" class="form-label">Employee Name</label>
-                    <input type="text" class="form-control" id="employeeName" name="employeeName" required>
+            <div class="col-md-3">
+                    <label for="orderDate" class="form-label">Ngày sử dụng</label>
+                <input type="text" class="form-control" id="orderDate" name="orderDate" required>
                 </div>
-            <div class="col-md-6">
-                    <label for="orderDate" class="form-label">Order Date</label>
-                    <input type="date" class="form-control" id="orderDate" name="orderDate" required>
-                </div>
-            <div class="col-md-6">
-                    <label for="preDeposit" class="form-label">Pre-deposit</label>
-                    <input type="number" class="form-control" id="preDeposit" name="preDeposit" required>
-                </div>
-            <div class="col-md-6">
-                    <label for="totalAmount" class="form-label">Total Amount</label>
-                    <input type="number" class="form-control" id="totalAmount" name="totalAmount" required>
-                </div>
-            <div class="col-md-6">
-                    <label for="status" class="form-label">Status</label>
-                    <select class="form-control" id="status" name="status" required>
-                        <option value="Chua chot">Chua chot</option>
-                        <option value="Da chot">Da chot</option>
-                        <option value="Huy">Huy</option>
-                    </select>
-                </div>
-            <div class="col-md-6">
-                    <label for="activity" class="form-label">Activity</label>
-                    <select class="form-control" id="activity" name="activity" required>
-                        <option value="Not yet">Not yet</option>
-                        <option value="Checkin">Checkin</option>
-                        <option value="Checkout">Checkout</option>
-                    </select>
-                </div>
+           </div>
+           <br />
+           <div class="col-md-3">
+                <select class="form-select">
+                    <option value="all">Tất cả loại vé</option>
+                    <option value="single-tickets">Vé đơn</option>
+                    <option value="team-tickets">Vé đoàn</option>
+               </select>
+           </div>
 
-                <button type="submit" class="btn btn-primary">Create Order</button>
-                <a href="/OrderManagement/Index" class="btn btn-secondary">Cancel</a>
-            </form>
-        </div>
+            
+                <table class="table table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Mã vẽ</th>
+                            <th>Tên vé</th>
+                            <th>Hình ảnh</th>
+                            <th>Giá</th>
+                            <th>Số lượng</th>
+                            
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>01</td>
+                            <td>Vé trẻ em</td>
+                            <td>50.000</td>
+                            <td>
+                        <input type="number" min="0" value="0" style="width: 100px;">
+                            </td>
+                            <td>img</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+        <a href="/OrderManagement/Index" class="btn btn-secondary">Quay lại</a>
+            <a href="/OrderManagement/OrderCampingGears" class="btn btn-primary">Tiếp tục</a>
+                
+            
+       </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C8fC7N6'e6OzTO+648+pGdO/d6k4l726DwN13j0xV7V7+x70863161b" crossorigin="anonymous"></script>
     </body>
