--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/Index.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/Index.cshtml
@@ -10,30 +10,31 @@
 <body>
     <div class="container">
         <div>
-            <h2>Order Management</h2>
+            <h2>Quản lý đặt trước</h2>
             <div class="row g-2 mb-3">
             <div class="col-md-3">
                 <input type="text" id="searchInput" class="form-control" placeholder="Search here..">
             </div>
             <div class ="col-md-3">
-                <a id="createButton" class="btn btn-primary" href="/OrderManagement/CreateOrder">Create New Order</a>
+                <a id="createButton" class="btn btn-primary" href="/OrderManagement/CreateOrder">Tạo order mới</a>
             </div>
             </div>
             <table class="table table-striped table-bordered">
                 <thead>
                     <tr>
-                        <th>Order ID</th>
-                        <th>Customer Name</th>
-                        <th>Employee Name</th>
-                        <th>Order Date</th>
-                        <th>Pre-deposit</th>
-                        <th>Total Amount</th>
+                        <th>Mã đặt</th>
+                        <th>Tên khách hàng</th>
+                        <th>Tên nhân viên</th>
+                        <th>Ngày đặt</th>
+                        <th>Ngày sử dụng</th>
+                        <th>Tiền cọc</th>
+                        <th>Tổng tiền</th>
                         <th>Remaining</th>
                         <!-- đã chốt/chưa chốt/hủy -->
-                        <th>Status</th>
+                        <th>Trạng thái</th>
                         <!-- checkin/ checkout/ Not yet -->
-                        <th>Activity</th>
-                        <th>Actions</th>
+                        <th>Hoạt động</th>
+                        <th>Thao tác</th>
                     </tr>
                 </thead>
                 <tbody id="orderTableBody">
@@ -48,22 +49,17 @@
                         <td>Chua chot</td>
                         <td>Not yet</td>
                         <td>
-                            <a class="btn btn-primary" href="OrderManagement/UpdateOrder">Edit</a>
+                            <a class="btn btn-primary" href="/OrderManagement/UpdateOrder">Edit</a>
                             <button class="btn btn-danger">Delete</button>
                         </td>
                     </tr>
                 </tbody>
             </table>
-            <!-- Pagination Controls -->
-            <nav aria-label="Page navigation example">
-                <ul class="pagination" id="paginationControls">
-                    <!-- Pagination buttons will be dynamically created -->
-                </ul>
-            </nav>
+            
            
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C8fC7N6'e6OzTO+648+pGdO/d6k4l726DwN13j0xV7V7+x70863161b" crossorigin="anonymous"></script>
-    <script src="~/js/Admin/ordermanagement.js"></script>
+    
 </body>
 </html>
