--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderDetails.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderDetails.cshtml
@@ -23,7 +23,12 @@
         </div>
         <br />
 
+        <div class="row g-2 mb-3">
         <h2>Vé đã đặt</h2>
+            <div class="col-md-3">
+                <a href="#">Cập nhật vé</a>
+            </div>
+        </div>
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
