--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/CustomerManagement/Index.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/CustomerManagement/Index.cshtml
@@ -10,19 +10,24 @@
 <body>
     <div class="container">
         <div>
-            <h2>Customer Management</h2>
-            <div class="col-md-3">
-                <input type="text" id="searchInput" class="form-control" placeholder="Search here..">
+            <h2>Quản lý khách hàng</h2>
+            <div class="row g-2 mb-3">
+                <div class="col-md-3">
+                    <input type="text" id="searchInput" class="form-control" placeholder="Tìm kiếm..">
+                </div>
+                <div class="col-md-3">
+                    <a id="createButton" class="btn btn-primary" href="/CustomerManagement/CreateCustomer">Tạo tài khoản mới</a>
+                </div>
             </div>
             <table class="table table-striped table-bordered">
                 <thead>
                     <tr>
-                        <th>ID</th>
-                        <th>Name</th>
-                        <th>Account</th>
-                        <th>Phone</th>
-                        <th>Address</th>
-                        <th>Actions</th>
+                        <th>Mã khách hàng</th>
+                        <th>Tên khách hàng</th>
+                        <th>Tài khoản</th>
+                        <th>Số điện thoại</th>
+                        <th>Địa chỉ</th>
+                        <th>Thao tác</th>
                     </tr>
                 </thead>
                 <tbody id="customerTableBody">
@@ -45,7 +50,7 @@
                     <!-- Pagination buttons will be dynamically created -->
                 </ul>
             </nav>
-            <button id="createButton" class="btn btn-primary">Create New Customer</button>
+            
         </div>
     </div>
 
