--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/EmployeeManagement/Index.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/EmployeeManagement/Index.cshtml
@@ -11,8 +11,13 @@
     <div class="container">
         <div>
             <h2>Employee Management</h2>
-            <div class="col-md-3">
-                <input type="text" id="searchInput" class="form-control" placeholder="Search here..">
+            <div class="row g-2 mb-3">
+                <div class="col-md-3">
+                    <input type="text" id="searchInput" class="form-control" placeholder="Tìm kiếm..">
+                </div>
+                <div class="col-md-3">
+                    <a id="createButton" class="btn btn-primary" href="/EmployeeManagement/CreateEmployee">Tạo tài khoản mới</a>
+                </div>
             </div>
             <table class="table table-striped table-bordered">
                 <thead>
@@ -43,7 +48,7 @@
                     <!-- Pagination buttons will be dynamically created -->
                 </ul>
             </nav>
-            <button id="createButton" class="btn btn-primary">Create New Employee</button>
+            
         </div>
     </div>
 
