--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/EventManagement/Index.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/EventManagement/Index.cshtml
@@ -16,7 +16,7 @@
                     <input type="text" id="searchInput" class="form-control" placeholder="Search here..">
                 </div>
                 <div class="col-md-3">
-                    <a id="createButton" class="btn btn-primary" href="/OrderManagement/CreateOrder">Tạo order mới</a>
+                    <a id="createButton" class="btn btn-primary" href="/EventManagement/CreateEvent">Tạo sự kiện mới</a>
                 </div>
             </div>
             <table class="table table-striped table-bordered">
