--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/EmployeeManagement/Index.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/EmployeeManagement/Index.cshtml
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div>
-            <h2>Employee Management</h2>
+            <h2>Quản lý nhân viên</h2>
             <div class="row g-2 mb-3">
                 <div class="col-md-3">
                     <input type="text" id="searchInput" class="form-control" placeholder="Tìm kiếm..">
@@ -22,11 +22,11 @@
             <table class="table table-striped table-bordered">
                 <thead>
                     <tr>
-                        <th>ID</th>
-                        <th>Name</th>
-                        <th>Account</th>
-                        <th>Phone</th>
-                        <th>Actions</th>
+                        <th>Mã nhân viên</th>
+                        <th>Tên nhân viên</th>
+                        <th>Tài khoản</th>
+                        <th>Số điện thoại</th>
+                        <th>Thao tác</th>
                     </tr>
                 </thead>
                 <tbody id="employeeTableBody">
