--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderTickets.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderTickets.cshtml
@@ -17,6 +17,10 @@
                 <input type="text" class="form-control" id="customerName" name="customerName" required>
             </div>
             <div class="col-md-3">
+                <label for="phone" class="form-label">Số điện thoại</label>
+                <input type="text" class="form-control" id="phone" name="phone" required>
+            </div>
+            <div class="col-md-3">
                 <label for="orderDate" class="form-label">Ngày sử dụng</label>
                 <input type="text" class="form-control" id="orderDate" name="orderDate" required>
             </div>
