css order management

--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderCampingGears.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderCampingGears.cshtml
@@ -76,7 +76,7 @@
 
 
         <a href="/OrderManagement/OrderTickets" class="btn btn-secondary">Quay lại</a>
-        <a href="/OrderManagement/OrderFoodAndDrinks" class="btn btn-primary">Tiếp tục</a>
+        <a href="/OrderManagement/OrderFoodAndDrinks" class="btn btn-primary" style="background-color: #28a745;">Tiếp tục</a>
 
 
     </div>
