--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderFoodAndDrinks.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderFoodAndDrinks.cshtml
@@ -75,7 +75,7 @@
 
 
         <a href="/OrderManagement/OrderCampingGears" class="btn btn-secondary">Quay lại</a>
-        <a class="btn btn-primary" href="/OrderManagement/OrderDetails">Chi tiết đơn hàng</a>
+        <a class="btn btn-primary" href="/OrderManagement/OrderDetails" style="background-color: #28a745;">Chi tiết đơn hàng</a>
 
 
 
