--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderTickets.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderTickets.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div class="col-md-3">
                 <label for="orderDate" class="form-label">Ngày sử dụng</label>
-                <input type="text" class="form-control" id="orderDate" name="orderDate" required>
+                <input type="datetime-local" class="form-control" id="orderDate" name="orderDate" required>
             </div>
         </div>
         <br />
@@ -91,7 +91,7 @@
         </table>
 
         <a href="/OrderManagement/Index" class="btn btn-secondary">Quay lại</a>
-        <a href="/OrderManagement/OrderCampingGears" class="btn btn-primary">Tiếp tục</a>
+        <a href="/OrderManagement/OrderCampingGears" class="btn btn-primary" style="background-color: #28a745;">Tiếp tục</a>
 
 
     </div>
