--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/Index.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/Index.cshtml
@@ -13,10 +13,10 @@
             <h2>Quản lý đặt trước</h2>
             <div class="row g-2 mb-3">
                 <div class="col-md-3">
-                    <input type="text" id="searchInput" class="form-control" placeholder="Tìm kiếm..">
+                    <input type="text" id="searchInput" class="form-control" placeholder="Search here..">
                 </div>
                 <div class="col-md-3">
-                    <a id="createButton" class="btn btn-primary" href="/OrderManagement/OrderTickets">Tạo order mới</a>
+                    <a id="createButton" class="btn btn-primary" href="/OrderManagement/CreateOrder">Tạo order mới</a>
                 </div>
             </div>
             <table class="table table-striped table-bordered">
@@ -32,7 +32,7 @@
                         <th>Phải trả</th>
                         <th>Trạng thái</th>
                         <th>Hoạt động</th>
-                        <th>Thao tác</th>
+                       
                     </tr>
                 </thead>
 
@@ -43,7 +43,7 @@
 
                         <tr>
 
-                            <td><a asp-controller="Order" asp-action="OrderDetails" asp-route-idorder="@item.OrderId">@item.OrderId</a></td>
+                            <td><a asp-controller="Order" asp-action="OrderDetails" asp-route-idorder="@item.OrderId">#@item.OrderId</a></td>
 
                             <td>@item.CustomerName</td>
                             <td>@item.EmployeeName</td>
@@ -105,6 +105,17 @@
                                     button:hover {
                                         background-color: #218838; /* Darker green on hover */
                                     }
+
+                                /* Center text in table cells */
+                                .table th, .table td {
+                                    text-align: center; /* Center text */
+                                }
+
+                                .table thead th {
+                                    background-color: #026345; /* Màu xanh lá cây đậm */
+                                    color: white;
+                                    font-weight: bold;
+                                }
 
                                 /* Input field styling */
                                 input[type="number"] {
@@ -197,7 +208,7 @@
                                 }
                                 else
                                 {
-                                    <button onclick="showCancelDepositConfirm(@item.OrderId)">Hủy cọc</button>
+                                    <button style="background-color: red;" onclick="showCancelDepositConfirm(@item.OrderId)">Hủy cọc</button>
                                 }
 
                             </td>
@@ -223,13 +234,7 @@
                                     </select>
                                 </form>
                             </td>
-                            <td>
-                                <a class="btn btn-primary" href="OrderManagement/UpdateOrder">Edit</a>
-                                <button class="btn btn-danger">Delete</button>
-                            </td>
-
-
-
+                            
                         </tr>
                     }
 
