--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/Index.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/Index.cshtml
@@ -13,10 +13,10 @@
             <h2>Quản lý đặt trước</h2>
             <div class="row g-2 mb-3">
                 <div class="col-md-3">
-                    <input type="text" id="searchInput" class="form-control" placeholder="Search here..">
+                    <input type="text" id="searchInput" class="form-control" placeholder="Tim kiem..">
                 </div>
                 <div class="col-md-3">
-                    <a id="createButton" class="btn btn-primary" href="/OrderManagement/CreateOrder">Tạo order mới</a>
+                    <a id="createButton" class="btn btn-primary" href="/OrderManagement/OrderTickets" style="background-color: #28a745;">Tạo order mới</a>
                 </div>
             </div>
             <table class="table table-striped table-bordered">
