--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/wwwroot/css/Admin/styles.css
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/wwwroot/css/Admin/styles.css
@@ -25,7 +25,7 @@
 
     .table th, .table td {
         padding: 15px;
-        text-align: left;
+        text-align: center;
         vertical-align: middle;
     }
 
@@ -50,10 +50,12 @@
         }
 
 /* Button styles */
-/*.btn {
+.button {
     border-radius: 5px;
     background-color: #28a745;
-}*/
+}
+
+
 
 
 
