update order camping gears and food&drinks

--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/Index.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/Index.cshtml
@@ -13,7 +13,7 @@
             <h2>Quản lý đặt trước</h2>
             <div class="row g-2 mb-3">
                 <div class="col-md-3">
-                    <input type="text" id="searchInput" class="form-control" placeholder="Tim kiem..">
+                    <input type="text" id="searchInput" class="form-control" placeholder="Tìm kiếm..">
                 </div>
                 <div class="col-md-3">
                     <a id="createButton" class="btn btn-primary" href="/OrderManagement/OrderTickets" style="background-color: #28a745;">Tạo order mới</a>
