--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderDetails.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderDetails.cshtml
@@ -27,9 +27,12 @@
         </div>
         <br />
 
+        <!-- Vé đã đặt -->
         <div class="row g-2 mb-3">
-        <h2>Vé đã đặt</h2>
-            <div class="col-md-3">
+            <div class="col-md-2">
+                <h2>Vé đã đặt</h2>
+            </div>
+            <div class="col-md-2">
                 <a style="background-color: #28a745;" class="btn btn-primary" href="#">Cập nhật vé</a>
             </div>
         </div>
@@ -58,7 +61,16 @@
         </table>
 
         <br />
-        <h2>Đồ cắm trại</h2>
+
+        <!-- Đồ cắm trại đặt -->
+        <div class="row g-2 mb-3">
+        <div class="col-md-2">
+            <h2>Đồ cắm trại đặt</h2>
+        </div>
+        <div class="col-md-2">
+            <a style="background-color: #28a745;" class="btn btn-primary" href="#">Cập nhật đồ cắm trại</a>
+        </div>
+        </div>
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
@@ -84,7 +96,16 @@
         </table>
 
         <br />
-        <h2>Đồ ăn và đồ uống</h2>
+
+        <!-- Đồ ăn và đồ uống -->
+        <div class="row g-2 mb-3">
+        <div class="col-md-3">
+            <h2>Đồ ăn và đồ uống</h2>
+        </div>
+        <div class="col-md-3">
+            <a style="background-color: #28a745;" class="btn btn-primary" href="#">Cập nhật đồ ăn và đồ uống</a>
+        </div>
+        </div>
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
@@ -111,7 +132,7 @@
             </tbody>
         </table>
 
-        <a href="/OrderManagement/Index" class="btn btn-secondary">Quay lại</a>
+        <a href="/OrderManagement/OrderFoodAnđrinks" class="btn btn-secondary">Quay lại</a>
         <button type="submit" class="btn btn-primary" style="background-color: #28a745;">Tạo order</button>
 
 
