--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderCampingGears.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderCampingGears.cshtml
@@ -10,13 +10,15 @@
 <body>
     <div class="container mt-4">
         <h2>Đặt đồ cắm trại</h2><br />
-
+       
         <div class="col-md-3">
             <script>
                 function change() {
                     document.getElementById("fr").submit();
                 }
             </script>
+                <div class="row g-2 mb-6">
+                    <div class="col-md-3">
             <form id="fr" asp-controller="OrderManagement" asp-action="OrderCampingGears" method="get">
                 <select name="idcategory" class="form-select" onchange="change()">
                     <option value="0">Tất cả</option>
@@ -39,11 +41,16 @@
                     }
                 </select>
             </form>
+          </div>
+
+          <div class="col-md-6">
+                        <input type="text" id="searchInput" class="form-control" placeholder="Tìm kiếm..">
+              </div>
+         </div>
 
         </div>
-
-
-        <table class="table table-striped table-bordered">
+        
+        <table class="table table-striped table-bordered ">
             <thead>
                 <tr>
                     <th>Mã đồ</th>
@@ -78,8 +85,8 @@
         <a href="/OrderManagement/OrderTickets" class="btn btn-secondary">Quay lại</a>
         <a href="/OrderManagement/OrderFoodAndDrinks" class="btn btn-primary" style="background-color: #28a745;">Tiếp tục</a>
 
-
-    </div>
+        </div>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C8fC7N6'e6OzTO+648+pGdO/d6k4l726DwN13j0xV7V7+x70863161b" crossorigin="anonymous"></script>
 </body>
