add button Cart

--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderFoodAndDrinks.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderFoodAndDrinks.cshtml
@@ -15,7 +15,6 @@
                 document.getElementById("fr").submit();
             }
         </script>
-        <div class="row g-2 mb-6">
         <div class="col-md-3">
             <form id="fr" asp-controller="OrderManagement" asp-action="OrderFoodAndDrinks" method="get">
 
@@ -43,43 +42,47 @@
                 </select>
             </form>
         </div>
-        <div class="col-md-6">
-            <input type="text" id="searchInput" class="form-control" placeholder="Tìm kiếm..">
-        </div>
-       </div>
-        <table class="table table-striped table-bordered">
-            <thead>
-                <tr>
-                    <th>Mã</th>
-                    <th>Tên</th>
-                    <th>Hình ảnh</th>
-                    <th>Giá</th>
-                    <th>Yêu cầu thêm</th>
-                    <th>Số lượng</th>
+        <form asp-controller="OrderManagement" asp-action="AddCartItem" method="get">
 
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (FoodAndDrinkVM item in ViewBag.gears)
-                {
+            <table class="table table-striped table-bordered">
+                <thead>
                     <tr>
-                        <td>@item.ItemId</td>
-                        <td>@item.ItemName</td>
-                        <td>@item.ImgUrl</td>
-                        <td>@item.Price</td>
-                        <td><textarea></textarea></td>
-                        <td>
-                            <input type="number" min="0" value="0" style="width: 100px;">
-                        </td>
+                        <th>Mã</th>
+                        <th>Tên</th>
+                        <th>Hình ảnh</th>
+                        <th>Giá</th>
+                        <th>Yêu cầu thêm</th>
+                        <th>Số lượng</th>
 
                     </tr>
-                }
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    @foreach (FoodAndDrinkVM item in ViewBag.gears)
+                    {
+                        <tr>
+                            <td>@item.ItemId</td>
+                            <td>@item.ItemName</td>
+                            <td>@item.ImgUrl</td>
+                            <td>@item.Price</td>
+                            <td><textarea name="description"></textarea></td>
+                            <td>
 
+                                <input type="text" value="@item.ItemId" hidden name="id">
+                                <input type="text" value="@item.ItemName" hidden name="name">
+                                <input type="number" value="@item.Price" hidden name="price">
+                                <input type="number" min="0" style="width: 100px;" value="@item.Quantity" name="quantity">
+                            </td>
+
+                        </tr>
+                    }
+                </tbody>
+            </table>
+            <button type="submit">Add to Cart</button>
+
+        </form>
 
         <a href="/OrderManagement/OrderCampingGears" class="btn btn-secondary">Quay lại</a>
-        <a class="btn btn-primary" href="/OrderManagement/OrderDetails" style="background-color: #28a745;">Chi tiết đơn hàng</a>
+        <a class="btn btn-primary" href="/OrderManagement/OrderDetails">Chi tiết đơn hàng</a>
 
 
 
