--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderCampingGears.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderCampingGears.cshtml
@@ -10,15 +10,13 @@
 <body>
     <div class="container mt-4">
         <h2>Đặt đồ cắm trại</h2><br />
-       
+
         <div class="col-md-3">
             <script>
                 function change() {
                     document.getElementById("fr").submit();
                 }
             </script>
-                <div class="row g-2 mb-6">
-                    <div class="col-md-3">
             <form id="fr" asp-controller="OrderManagement" asp-action="OrderCampingGears" method="get">
                 <select name="idcategory" class="form-select" onchange="change()">
                     <option value="0">Tất cả</option>
@@ -41,52 +39,54 @@
                     }
                 </select>
             </form>
-          </div>
-
-          <div class="col-md-6">
-                        <input type="text" id="searchInput" class="form-control" placeholder="Tìm kiếm..">
-              </div>
-         </div>
 
         </div>
-        
-        <table class="table table-striped table-bordered ">
-            <thead>
-                <tr>
-                    <th>Mã đồ</th>
-                    <th>Tên</th>
-                    <th>Hình ảnh</th>
-                    <th>S/L có sẵn</th>
-                    <th>Giá thuê</th>
-                    <th>Số lượng</th>
+        <form asp-controller="OrderManagement" asp-action="AddCartCampingGear" method="get">
 
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (GearVM item in ViewBag.gears)
-                {
+
+            <table class="table table-striped table-bordered">
+                <thead>
                     <tr>
-                        <td>@item.GearId</td>
-                        <td>@item.GearName</td>
-                        <td>@item.ImgUrl</td>
-                        <td>@item.QuantityAvailable</td>
-                        <td>@item.RentalPrice</td>
-                        <td>
-                            <input type="number" min="0" value="0" style="width: 100px;">
-                        </td>
+                        <th>Mã đồ</th>
+                        <th>Tên</th>
+                        <th>Hình ảnh</th>
+                        <th>S/L có sẵn</th>
+                        <th>Giá thuê</th>
+                        <th>Số lượng</th>
 
                     </tr>
-                }
+                </thead>
+                <tbody>
+                    @foreach (GearVM item in ViewBag.gears)
+                    {
+                        <tr>
+                            <td>@item.GearId</td>
+                            <td>@item.GearName</td>
+                            <td>@item.ImgUrl</td>
+                            <td>@item.QuantityAvailable</td>
+                            <td>@item.RentalPrice</td>
+                            <td>
 
-            </tbody>
-        </table>
+                                <input type="text" value="@item.GearId" hidden name="id">
+                                <input type="text" value="@item.GearName" hidden name="name">
+                                <input type="number" value="@item.RentalPrice" hidden name="price">
+                                <input type="number" min="0" value="@item.Quantity" max="@item.QuantityAvailable" style="width: 100px;" name="quantity">
+                            </td>
 
+                        </tr>
+                    }
+
+                </tbody>
+            </table>
+            <button type="submit">Add to Cart</button>
+
+        </form>
 
         <a href="/OrderManagement/OrderTickets" class="btn btn-secondary">Quay lại</a>
-        <a href="/OrderManagement/OrderFoodAndDrinks" class="btn btn-primary" style="background-color: #28a745;">Tiếp tục</a>
+        <a href="/OrderManagement/OrderFoodAndDrinks" class="btn btn-primary">Tiếp tục</a>
 
-        </div>
-    
+
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C8fC7N6'e6OzTO+648+pGdO/d6k4l726DwN13j0xV7V7+x70863161b" crossorigin="anonymous"></script>
 </body>
